# scout-api

./: Cargo.toml  LICENSE  README.md  env.example  project.json  projects.json
.cargo/: config.toml
src/: auth.rs  constants.rs  main.rs  models.rs  profiles.rs  swap.rs  wallets.rs
src/defi/: magpiefi.rs  mod.rs  models.rs  spl_swap_client.rs
