[package]
name = "onchain-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.4", features = ["cors"] }
dotenvy = "0.15.7"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
ethers = "2.0" 
rand = "0.8"
hex = "0.4"

[dependencies.rusqlite]
version = "0.29"
features = ["bundled"]
