[package]
name = "onchain-ops"
version = "0.1.0"
edition = "2021"

# Added rust-version to help with proc-macro compatibility
rust-version = "1.65"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
# Explicitly specify serde with all needed features
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
tower-http = { version = "0.4", features = ["cors"] }
dotenvy = "0.15.7"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
hex = "0.4"
# Solana dependencies
solana-sdk = "1.16"
solana-client = "1.16"
solana-transaction-status = "1.16"
solana-account-decoder = "1.16"
spl-token = "4.0"
spl-associated-token-account = "2.2"
spl-token-swap = "3.0"
bs58 = "0.5"
anyhow = "1.0"
chrono = "0.4"

[dependencies.rusqlite]
version = "0.29"
features = ["bundled"]

# Add a workspace section to help with dependency resolution
[workspace]
resolver = "2"
